--- a/ces.sincroapp/app/src/main/AndroidManifest.xml
+++ b/ces.sincroapp/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.isel.sincroapp">
 
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +14,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.register.RegisterActivity"></activity>
+        <meta-data
+            android:name="com.google.android.wearable.standalone"
+            android:value="true" />
+
+        <activity
+            android:name=".ui.main.MainActivity"
+            android:label="@string/title_activity_main">
+        </activity>
+        <activity android:name=".ui.register.RegisterActivity" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/app_name">
